--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -41,6 +41,7 @@
     "@backstage/plugin-search-backend-module-techdocs": "^0.3.4",
     "@backstage/plugin-search-backend-node": "^1.3.6",
     "@backstage/plugin-techdocs-backend": "^1.11.4",
+    "@internal/backstage-plugin-stack-overflow-teams-backend": "^0.1.0",
     "app": "link:../app",
     "better-sqlite3": "^9.0.0",
     "dotenv": "^16.4.7",
