--- a/app-config.yaml
+++ b/app-config.yaml
@@ -10,6 +10,8 @@ stackoverflow:
   teams: false
   # teamName: ${STACK_OVERFLOW_TEAM_NAME}
   apiAccessToken: ${STACK_OVERFLOW_ENTERPRISE_ACCESS_TOKEN}
+  clientId: 13
+  redirectUri: http://redirectmeto.com/http://localhost:3000/stack-overflow-teams/callback
   schedule:
     {
       frequency: { minutes: 20 },
