--- a/plugins/stack-overflow-teams/package.json
+++ b/plugins/stack-overflow-teams/package.json
@@ -28,10 +28,12 @@
     "@backstage/core-plugin-api": "^1.10.2",
     "@backstage/plugin-search-react": "^1.8.6",
     "@backstage/theme": "^0.6.3",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.61",
-    "@mui/material": "^6.4.6",
+    "@mui/material": "5.16.14",
     "react-use": "^17.2.4"
   },
   "peerDependencies": {
