--- a/plugins/stack-overflow-teams-backend/package.json
+++ b/plugins/stack-overflow-teams-backend/package.json
@@ -11,7 +11,12 @@
     "types": "dist/index.d.ts"
   },
   "backstage": {
-    "role": "backend-plugin"
+    "role": "backend-plugin",
+    "pluginId": "stack-overflow-teams",
+    "pluginPackages": [
+      "@internal/backstage-plugin-stack-overflow-teams",
+      "@internal/backstage-plugin-stack-overflow-teams-backend"
+    ]
   },
   "scripts": {
     "start": "backstage-cli package start",
@@ -27,16 +32,22 @@
     "@backstage/backend-plugin-api": "^1.1.0",
     "@backstage/catalog-client": "^1.9.0",
     "@backstage/errors": "^1.2.6",
+    "@backstage/config": "^1.3.2",
     "@backstage/plugin-catalog-node": "^1.15.0",
+    "@backstage/plugin-search-common": "^1.2.17",
+    "@backstage/plugin-search-backend-node": "^1.3.8",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
+    "qs": "^6.14.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@backstage/backend-test-utils": "^1.2.0",
     "@backstage/cli": "^0.29.4",
     "@types/express": "^4.17.6",
+    "@types/qs": "^6",
     "@types/supertest": "^2.0.12",
+    "msw": "^2.7.3",
     "supertest": "^6.2.4"
   },
   "files": [
