--- a/plugins/stack-overflow-teams-backend/package.json
+++ b/plugins/stack-overflow-teams-backend/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "@internal/backstage-plugin-stack-overflow-teams-backend",
-  "version": "0.1.0",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "name": "backstage-plugin-stack-overflow-teams-backend",
+  "version": "0.1.3",
+  "main": "dist/index.cjs.js",
+  "types": "dist/index.d.ts",
   "license": "Apache-2.0",
-  "private": true,
   "publishConfig": {
     "access": "public",
     "main": "dist/index.cjs.js",
@@ -17,6 +16,13 @@
       "@internal/backstage-plugin-stack-overflow-teams",
       "@internal/backstage-plugin-stack-overflow-teams-backend"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/estoesmoises/backstage-stackoverflow"
+  },
+  "bugs": {
+    "url": "https://github.com/EstoesMoises/backstage-stackoverflow/issues"
   },
   "scripts": {
     "start": "backstage-cli package start",
