--- a/plugins/stack-overflow-teams/package.json
+++ b/plugins/stack-overflow-teams/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@internal/backstage-plugin-stack-overflow-teams",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
-  "private": true,
   "publishConfig": {
     "access": "public",
     "main": "dist/index.esm.js",
@@ -17,6 +16,13 @@
       "@internal/backstage-plugin-stack-overflow-teams",
       "@internal/backstage-plugin-stack-overflow-teams-backend"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/estoesmoises/backstage-stackoverflow"
+  },
+  "bugs": {
+    "url": "https://github.com/EstoesMoises/backstage-stackoverflow/issues"
   },
   "sideEffects": false,
   "scripts": {
