--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -40,9 +40,9 @@
     "@backstage/plugin-search-backend-module-techdocs": "^0.3.4",
     "@backstage/plugin-search-backend-node": "^1.3.6",
     "@backstage/plugin-techdocs-backend": "^1.11.4",
-    "@internal/backstage-plugin-search-backend-module-stack-overflow-teams-collator": "^0.1.0",
-    "@internal/backstage-plugin-stack-overflow-teams-backend": "^0.1.0",
     "app": "link:../app",
+    "backstage-plugin-stack-overflow-teams-backend": "^0.1.0",
+    "backstage-stack-overflow-teams-collator": "^0.1.0",
     "better-sqlite3": "^9.0.0",
     "dotenv": "^16.4.7",
     "node-gyp": "^10.0.0",
