--- a/plugins/stack-overflow-teams-backend/package.json
+++ b/plugins/stack-overflow-teams-backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backstage-plugin-stack-overflow-teams-backend",
-  "version": "0.1.3",
+  "version": "1.0.0",
   "main": "dist/index.cjs.js",
   "types": "dist/index.d.ts",
   "license": "Apache-2.0",
@@ -13,8 +13,8 @@
     "role": "backend-plugin",
     "pluginId": "stack-overflow-teams",
     "pluginPackages": [
-      "@internal/backstage-plugin-stack-overflow-teams",
-      "@internal/backstage-plugin-stack-overflow-teams-backend"
+      "backstage-plugin-stack-overflow-teams",
+      "backstage-plugin-stack-overflow-teams-backend"
     ]
   },
   "repository": {
