--- a/plugins/stack-overflow-teams/package.json
+++ b/plugins/stack-overflow-teams/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@internal/backstage-plugin-stack-overflow-teams",
-  "version": "0.1.1",
+  "name": "backstage-plugin-stack-overflow-teams",
+  "version": "1.0.0",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
@@ -13,8 +13,8 @@
     "role": "frontend-plugin",
     "pluginId": "stack-overflow-teams",
     "pluginPackages": [
-      "@internal/backstage-plugin-stack-overflow-teams",
-      "@internal/backstage-plugin-stack-overflow-teams-backend"
+      "backstage-plugin-stack-overflow-teams",
+      "backstage-plugin-stack-overflow-teams-backend"
     ]
   },
   "repository": {
