--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -40,7 +40,7 @@
     "@backstage/theme": "^0.6.3",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
-    "backstage-plugin-stack-overflow-teams": "^0.1.0",
+    "backstage-plugin-stack-overflow-teams": "workspace:*",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router": "^6.3.0",
