--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -41,8 +41,8 @@
     "@backstage/plugin-search-backend-node": "^1.3.6",
     "@backstage/plugin-techdocs-backend": "^1.11.4",
     "app": "link:../app",
-    "backstage-plugin-stack-overflow-teams-backend": "^0.1.0",
-    "backstage-stack-overflow-teams-collator": "^0.1.0",
+    "backstage-plugin-stack-overflow-teams-backend": "workspace:*",
+    "backstage-stack-overflow-teams-collator": "workspace:*",
     "better-sqlite3": "^9.0.0",
     "dotenv": "^16.4.7",
     "node-gyp": "^10.0.0",
