--- a/plugins/stack-overflow-teams-backend/package.json
+++ b/plugins/stack-overflow-teams-backend/package.json
@@ -1,13 +1,11 @@
 {
   "name": "backstage-plugin-stack-overflow-teams-backend",
-  "version": "1.0.0",
-  "main": "dist/index.cjs.js",
-  "types": "dist/index.d.ts",
+  "version": "1.0.1",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "license": "Apache-2.0",
   "publishConfig": {
-    "access": "public",
-    "main": "dist/index.cjs.js",
-    "types": "dist/index.d.ts"
+    "access": "public"
   },
   "backstage": {
     "role": "backend-plugin",
