--- a/app-config.yaml
+++ b/app-config.yaml
@@ -10,6 +10,7 @@ stackoverflow:
   # teamName: ${STACK_OVERFLOW_TEAM_NAME}
   apiAccessToken: ${STACK_OVERFLOW_ENTERPRISE_ACCESS_TOKEN}
   clientId: ${STACK_OVERFLOW_CLIENT_ID}
+  teamName: moises-test-team
   redirectUri: http://redirectmeto.com/http://localhost:3000/stack-overflow-teams/
   schedule:
     {
