--- a/app-config.yaml
+++ b/app-config.yaml
@@ -8,9 +8,15 @@ organization:
 stackoverflow:
   baseUrl: ${STACK_OVERFLOW_INSTANCE_URL}
   # teamName: ${STACK_OVERFLOW_TEAM_NAME}
+
   apiAccessToken: ${STACK_OVERFLOW_API_ACCESS_TOKEN}
+  # The API Access Token is used for the Questions' collator, a no-expiry, read-only token is recommended.
+
   clientId: ${STACK_OVERFLOW_CLIENT_ID}
+  # The clientid must be for an API Application with read-write access.
+
   redirectUri: ${STACK_OVERFLOW_REDIRECT_URI}
+  # This should redirect to your Stack Overfow for Teams route on Backstage. E.g. https://<backstage-domain>/stack-overflow-teams
 
 backend:
   # Used for enabling authentication, secret is shared by all backend plugins
