--- a/app-config.production.yaml
+++ b/app-config.production.yaml
@@ -2,6 +2,19 @@ app:
   # Should be the same as backend.baseUrl when using the `app-backend` plugin.
   baseUrl: http://localhost:7007
 
+stackoverflow:
+  baseUrl: ${STACK_OVERFLOW_INSTANCE_URL}
+  # teamName: ${STACK_OVERFLOW_TEAM_NAME}
+
+  apiAccessToken: ${STACK_OVERFLOW_API_ACCESS_TOKEN}
+  # The API Access Token is used for the Questions' collator, a no-expiry, read-only token is recommended.
+
+  clientId: ${STACK_OVERFLOW_CLIENT_ID}
+  # The clientid must be for an API Application with read-write access.
+
+  redirectUri: ${STACK_OVERFLOW_REDIRECT_URI}
+  # If no redirectUri is specified this will return to https://<backstage-domain>/stack-overflow-teams
+
 backend:
   # Note that the baseUrl should be the URL that the browser and other clients
   # should use when communicating with the backend, i.e. it needs to be
