--- a/.dockerignore
+++ b/.dockerignore
@@ -2,6 +2,7 @@ dist-types
 node_modules
 packages/*/dist
 packages/*/node_modules
+packages/backend/.env
 plugins/*/dist
 plugins/*/node_modules
 *.local.yaml
