--- a/plugins/stack-overflow-teams-backend/package.json
+++ b/plugins/stack-overflow-teams-backend/package.json
@@ -40,6 +40,7 @@
     "@backstage/plugin-catalog-node": "^1.15.0",
     "@backstage/plugin-search-backend-node": "^1.3.8",
     "@backstage/plugin-search-common": "^1.2.17",
+    "csrf": "^3.1.0",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
