--- a/app-config.yaml
+++ b/app-config.yaml
@@ -18,10 +18,10 @@ stackoverflow:
   apiAccessToken: ${STACK_OVERFLOW_API_ACCESS_TOKEN}
   # The API Access Token is used for the Questions' collator, a no-expiry, read-only token is recommended.
 
-  # clientId: ${STACK_OVERFLOW_CLIENT_ID}
+  clientId: ${STACK_OVERFLOW_CLIENT_ID}
   # The clientid must be for an API Application with read-write access. Only provide if you are using the Enterprise tier.
 
-  # redirectUri: ${STACK_OVERFLOW_REDIRECT_URI}
+  redirectUri: ${STACK_OVERFLOW_REDIRECT_URI}
   # If no redirectUri is specified this will return to https://<backstage-domain>/stack-overflow-teams. Only provide if you are using the Enterprise tier.
 
 backend:
