fix: now the hub presents Stack Overflow as plugin owner and the plugin version, added some tooltips too.

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -12,7 +12,7 @@ stackoverflow:
   baseUrl: ${STACK_OVERFLOW_INSTANCE_URL}
   # Required only for Enteprise Tier.
 
-  teamName: ${STACK_OVERFLOW_TEAM_NAME}
+  # teamName: ${STACK_OVERFLOW_TEAM_NAME}
   # Required only for Basic and Business Tiers. 
 
   apiAccessToken: ${STACK_OVERFLOW_API_ACCESS_TOKEN}
