switching to tiptap editor

--- a/plugins/stack-overflow-teams/package.json
+++ b/plugins/stack-overflow-teams/package.json
@@ -40,18 +40,21 @@
     "@backstage/plugin-search-react": "^1.8.6",
     "@backstage/theme": "^0.6.3",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.61",
-    "@mui/icons-material": "^7.1.0",
+    "@mui/icons-material": "^7.2.0",
     "@mui/material": "5.16.14",
-    "react-use": "^17.2.4",
-    "slate": "^0.117.2",
-    "slate-dom": "^0.117.4",
-    "slate-history": "^0.113.1",
-    "slate-hyperscript": "^0.100.0",
-    "slate-react": "^0.117.4"
+    "@tiptap/core": "^3.0.7",
+    "@tiptap/extension-heading": "^3.0.7",
+    "@tiptap/extension-image": "^3.0.7",
+    "@tiptap/extension-table": "^3.0.7",
+    "@tiptap/extensions": "^3.0.7",
+    "@tiptap/pm": "^3.0.7",
+    "@tiptap/react": "^3.0.7",
+    "@tiptap/starter-kit": "^3.0.7",
+    "react-use": "^17.2.4"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
