--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
       "prettier --write"
     ]
   },
-  "packageManager": "yarn@4.6.0"
+  "packageManager": "yarn@4.6.0",
+  "dependencies": {
+    "@changesets/cli": "^2.29.5"
+  }
 }
