--- a/plugins/stack-overflow-teams/package.json
+++ b/plugins/stack-overflow-teams/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backstage-plugin-stack-overflow-teams",
+  "name": "@stackoverflow/backstage-plugin-stack-overflow-teams",
   "version": "1.4.0",
   "main": "src/index.ts",
   "types": "src/index.ts",
