--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,16 +1,12 @@
 name: Release
+
 on:
   push:
     branches:
       - main
     paths:
       - 'plugins/**'
-  workflow_dispatch:  
-
-# Required for trusted publishing
-permissions:
-  contents: read
-  id-token: write  # Needed for provenance and trusted publishing
+  workflow_dispatch:
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -18,16 +14,27 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Setup Node.js 20.x
-        uses: actions/setup-node@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
-          node-version: 20.x
+          python-version: '3.11'
+
+      - name: Setup Node.js 24 LTS
+        uses: actions/setup-node@v6
+        with:
+          node-version: 24.12.0
           cache: 'yarn'
           registry-url: 'https://registry.npmjs.org'
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential g++ make python3-dev
 
       - name: Install Dependencies
         run: yarn install
