--- a/plugins/search-backend-module-stack-overflow-teams-collator/package.json
+++ b/plugins/search-backend-module-stack-overflow-teams-collator/package.json
@@ -1,14 +1,18 @@
 {
   "name": "@stackoverflow/backstage-stack-overflow-teams-collator",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "A module for the search backend that exports stack overflow for teams modules",
   "backstage": {
     "role": "backend-plugin-module",
     "pluginId": "search",
     "pluginPackage": "@backstage/plugin-search-backend"
   },
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "main": "dist/index.esm.js",
+    "types": "dist/index.d.ts"
   },
   "repository": {
     "type": "git",
@@ -18,8 +22,6 @@
     "url": "https://github.com/StackExchange/backstage-stackoverflow/issues"
   },
   "license": "Apache-2.0",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
   "files": [
     "dist",
     "config.d.ts"
