--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,22 +23,12 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Setup Node.js 20.x
+      - name: Setup Node.js 18
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: 18
           cache: 'yarn'
           registry-url: 'https://registry.npmjs.org'
-
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential g++ make python3-dev
 
       - name: Install Dependencies
         run: yarn install
