chore: rebranding patch (Stack Internal)

--- a/packages/backend/sample.env
+++ b/packages/backend/sample.env
@@ -1,5 +1,5 @@
 STACK_OVERFLOW_INSTANCE_URL=https://[your-site]/api/v3
-# This token doesn't needd scope=write_access, this is only use to create an index of all the questions of your Stack Overflow instance.
+# This token doesn't needd scope=write_access, this is only use to create an index of all the questions of your Stack Overflow Internal instance.
 STACK_OVERFLOW_API_ACCESS_TOKEN=
 # API Application must have read-write permissions, please provide the application's id.
 STACK_OVERFLOW_CLIENT_ID=
