--- a/plugins/search-backend-module-stack-overflow-teams-collator/package.json
+++ b/plugins/search-backend-module-stack-overflow-teams-collator/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@stackoverflow/backstage-stack-overflow-teams-collator",
   "version": "1.5.0",
-  "description": "A module for the search backend that exports stack overflow for teams modules",
+  "description": "A module for the search backend that exports Stack Internal modules",
   "backstage": {
     "role": "backend-plugin-module",
     "pluginId": "search",
