--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,12 @@ jobs:
       - name: Install Dependencies
         run: yarn install
 
+      - name: Generate TypeScript declarations
+        run: yarn tsc
+
+      - name: Build plugins
+        run: yarn workspaces foreach --include 'plugins/*' run build
+
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
