--- a/app-config.yaml
+++ b/app-config.yaml
@@ -16,6 +16,8 @@ stackoverflow:
   # Required only for Basic and Business Tiers. 
 
   apiAccessToken: ${STACK_OVERFLOW_API_ACCESS_TOKEN}
+  
+  # apiAccessToken: ${STACK_OVERFLOW_BUSINESS_ACCESS_TOKEN}
   # The API Access Token is used for the Questions' collator, a no-expiry, read-only token is recommended.
 
   clientId: ${STACK_OVERFLOW_CLIENT_ID}
