--- a/packages/backend/sample.env
+++ b/packages/backend/sample.env
@@ -1,7 +1,8 @@
 STACK_OVERFLOW_INSTANCE_URL=https://[your-site]/api/v3
-# This token doesn't needd scope=write_access, this is only use to create an index of all the questions of your Stack Overflow Internal instance.
 STACK_OVERFLOW_API_ACCESS_TOKEN=
-# API Application must have read-write permissions, please provide the application's id.
+STACK_OVERFLOW_BUSINESS_ACCESS_TOKEN=
+# This token doesn't needd scope=write_access, this is only use to create an index of all the questions of your Stack Overflow Internal instance.
 STACK_OVERFLOW_CLIENT_ID=
-# To run the integration on localhost, we need to redirect to localhost. SOE Requires a top-level domain, therefore we are using a redirection service that takes you to localhost. If you do have Backstage on a top level domain, change the redirect uri accordingly.
+# API Application must have read-write permissions, please provide the application's id.
 STACK_OVERFLOW_REDIRECT_URI=http://redirectmeto.com/http://localhost:3000/stack-overflow-teams
+# To run the integration on localhost, we need to redirect to localhost. SOE Requires a top-level domain, therefore we are using a redirection service that takes you to localhost. If you do have Backstage on a top level domain, change the redirect uri accordingly.
